Test cors-anywhere to bypass mixed content

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ window.onload = function()
             url: "vgabios.bin",
         },
         hda: {
-            "url": "http://ernestmainsite.x10.bz/permanent/2017/bros24th/hdd.img",
+            "url": "https://cors-anywhere.herokuapp.com/http://ernestmainsite.x10.bz/permanent/2017/bros24th/hdd.img",
             "size": 300 * 1024 * 1024,
         },
         autostart: true,
