Load hda asynchronously

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ window.onload = function()
         hda: {
             "url": "https://cors-anywhere.herokuapp.com/http://ernestmainsite.x10.bz/permanent/2017/bros24th/hdd.img",
             "size": 300 * 1024 * 1024,
+            "async": true
         },
         autostart: true,
     });
